# fio

./: .Rbuildignore  .gitignore  .lintr  404.html  CRAN-SUBMISSION  DESCRIPTION  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  configure  configure.win  cran-comments.md  index.html  pkgdown.yml  search.json  sitemap.xml  test_manual.R
.devcontainer/: Dockerfile  devcontainer.json  setup_rust.sh
.github/: dependabot.yml  pull_request_template.md
R/: addin.R  br_2020.R  calculations.R  download_wiod.R  extendr-wrappers.R  helpers.R  import_iom.R  import_miom.R  miom.R  r6.R  utils.R  world_2000.R
articles/: benchmark.html  benchmarking.html  benchmarking_i5.html  benchmarking_i7.html  benchmarking_m1.html  benchmarking_m4.html  getting_started.html  index.html  multiregional_analysis.html  wiod_2014_analysis.html
data/: br_2020.rda  iom_br_2020_51.rda
data-raw/: br_2020.R  exiobase.R  iom_br_2020_51.R  world_2000.R
inst/: REFERENCES.bib  WORDLIST
man/: br_2020.Rd  compute_allocation_coeff.Rd  compute_backward_linkages.Rd  compute_extraction_backward.Rd  compute_extraction_forward.Rd  compute_extraction_total.Rd  compute_field_influence.Rd  compute_forward_linkages.Rd  compute_generator_added_value.Rd  compute_generator_employment.Rd  compute_ghosh_inverse.Rd  compute_leontief_inverse.Rd  compute_multiplier_added_value.Rd  compute_multiplier_added_value_indirect.Rd  compute_multiplier_employment.Rd  compute_multiplier_employment_indirect.Rd  compute_multiplier_output.Rd  compute_multiplier_output_direct.Rd  compute_multiplier_output_indirect.Rd  compute_power_dispersion.Rd  compute_power_dispersion_cv.Rd  compute_requirements_added_value.Rd  compute_requirements_employment.Rd  compute_sensitivity_dispersion.Rd  compute_sensitivity_dispersion_cv.Rd  compute_tech_coeff.Rd  download_wiod.Rd  extraction_backward.Rd  extraction_forward.Rd  fio-package.Rd  fio_addin.Rd  import_element.Rd  import_miom.Rd  input_options.Rd  iom.Rd  leontief_inverse.Rd  miom.Rd  set_max_threads.Rd  tec_coeff.Rd  tecnical_coef.Rd  (+1 more)
news/: index.html
src/rust/: Cargo.toml  vendor-config.toml
src/rust/src/: download.rs  extraction.rs  ghosh.rs  influence.rs  leontief.rs  lib.rs  linkages.rs  multipliers.rs  parallel.rs
(+90 files in other folders)
