[package]
name = 'fio'
version = '0.1.6'
edition = '2021'
authors = ['Alberson Miranda']
description = 'Input-Output Analysis'
repository = 'https://github.com/albersonmiranda/fio/tree/main/src/rust'
license = 'MIT'
rust-version = '1.84'
keywords = ['economics', 'input-output-analysis']

[lib]
crate-type = [ 'staticlib' ]
name = 'fio'

[dependencies]
extendr-api = '*'
rayon = '1.10.0'
num_cpus = '1.16.0'
faer = { version = '0.22.6' }
reqwest = { version = "0.12.19", features = ["blocking", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
indicatif = { version = "0.18" }

[patch.crates-io]
extendr-api = { git = "https://github.com/extendr/extendr" }

[profile.release]
lto = true
codegen-units = 1
