[package]
name = 'fio'
version = '0.1.6'
edition = '2021'
authors = ['Alberson Miranda']
description = 'Input-Output Analysis'
repository = 'https://github.com/albersonmiranda/fio/tree/main/src/rust'
license = 'MIT'
rust-version = '1.84'
keywords = ['economics', 'input-output-analysis']

[lib]
crate-type = [ 'staticlib' ]
name = 'fio'

[dependencies]
extendr-api = { version = '0.8.1', default-features = false }
rayon = { version = '1.10.0', default-features = false }
num_cpus = { version = '1.16.0', default-features = false }
faer = { version = '0.24.0', default-features = false, features = ["rayon"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
